<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TwitMyLocation</string>
    <string name="action_settings">Settings</string>
    <string name="loginTwitText">Log in Twitter</string>
    <string name="logoutTwitText">Log out</string>
    <string name="findByHashText">Find</string>
    <string name="TwitMyLocation">Twit my location!</string>
    <string name="findMeOnMap">Find me on Map</string>
    <string name="placeMeOnMap">Point where I am</string>
    <string name="twitterMenu">Twitter</string>
    <string name="mapMenu">Map</string>
    <string name="gsr_not_enable">Location services are not enable. \n Do you want to turn it on?</string>
    <string name="go_to_setting">Turn gps on</string>
    <string name="cancel">Cancel</string>
    <string name="programHashTag">#TwitMyLocation</string>
    <string name="placeYourHashTag">Put down what you want to search</string>
    <string name="find">Look for</string>
    <string name="pick_image_source">Choose source of image</string>
    <string name="from_gallery">Take from gallery</string>
    <string name="from_camera">Catch from Camera</string>
    <string name="title_activity_send_twit">SendTwitActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="no_photo_warn">No photo</string>
    <string name="showTwitListText">Show list Of Twits</string>
    <string name="showMyTwitsText">Show My Twits</string>
    <string name="showUserTwitsText">Show User Twits</string>
    <string name="showInDistanceText">Show in neighborhood</string>
    <string name="twitDialogTitle" translatable="false">Tweet</string>
    <string name="clearMarkers">Clear all markers</string>
    <string name="FindPlaces">Find nearByPlaces</string>
    <string name="placeDialogTitle">Search for:</string>

</resources>
