<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/trans_black"
    android:id="@+id/listButtonsPanel"
    android:orientation="horizontal"
    android:visibility="gone">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"

            android:drawableLeft="@drawable/ic_action_list"
            android:id="@+id/showTwitList"
            android:padding="2dp"
            android:background="@drawable/button2"
            android:text="@string/showTwitListText"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="2dp"
            android:background="@drawable/button2"
            android:drawableLeft="@drawable/ic_action_useri"
            android:id="@+id/showMyTwits"
            android:text="@string/showMyTwitsText"/>


        </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="2dp"
            android:background="@drawable/button2"
            android:drawableLeft="@drawable/ic_action_user"
            android:id="@+id/showUserTwits"
            android:text="@string/showUserTwitsText"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="2dp"
            android:background="@drawable/button2"
            android:drawableLeft="@drawable/ic_action_distance"
            android:id="@+id/showInDistance"
            android:text="@string/showInDistanceText"/>

    </LinearLayout>

</LinearLayout>